TWINS-799: inheritable support (pt.5)